# DECENT-Network

./: CMakeLists.txt  README.md
libraries/encrypt/: CMakeLists.txt
